<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>yanthra_move</name>
  <version>1.0.0</version>
  <description>ROS2 Yanthra cotton picking robot motion control package</description>

  <maintainer email="maintainer@example.com">Yanthra Team</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- Core ROS2 dependencies -->
  <depend>rclcpp</depend>
  <depend>rclcpp_action</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>trajectory_msgs</depend>
  <depend>control_msgs</depend>

  <!-- TF and transforms -->
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_geometry_msgs</depend>

  <!-- Custom dependencies -->
  <depend>motor_control_ros2</depend>
  <depend>motor_control_msgs</depend>
  <depend>cotton_detection_msgs</depend>
  <depend>common_utils</depend>
  <depend>nlohmann-json3-dev</depend>

  <!-- Launch/runtime dependency: pragati_complete.launch.py loads URDF from robot_description -->
  <exec_depend>robot_description</exec_depend>

  <!-- Message generation -->
  <buildtool_depend>rosidl_default_generators</buildtool_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>

  <!-- REMOVED 2025-11-28: Unused dependencies cleaned up -->
  <!-- rclpy, cv_bridge, image_transport, geometric_shapes, resource_retriever, yaml-cpp-vendor -->

  <member_of_group>rosidl_interface_packages</member_of_group>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <test_depend>launch_testing</test_depend>
  <test_depend>launch_testing_ament_cmake</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
